@@ -3,6 +3,7 @@ Auto IRC Bot 3.0: Change Log
 
 3.0 Indev
 ===============================================================================
+    * Ping: Determines end by numeric 315 instead of a 3-second timer now.
     * Werewolf: Fixed a GUARD issue and made it possible to VISIT yourself.
     * Possibly fixed a rare fatal error.
     * Werewolf: Rewrote WAIT to be more decent.
